--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>CryptoClerk</title>
     <!-- inject:css -->
-    <link rel="stylesheet" href="/bower_components/codemirror/lib/codemirror.css">
-    <link rel="stylesheet" href="/css/highlight-default.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./bower_components/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="./css/highlight-default.css">
+    <link rel="stylesheet" href="./css/main.css">
     <!-- endinject -->
 
   </head>
@@ -74,6 +74,7 @@ contract Coin {
     }
 }
           </code></pre>
+          <button type="button" name="button" id="compileButton">TEST</button>
         </div>
 
         <div class="col-md-6">
@@ -84,14 +85,18 @@ contract Coin {
     </div>
 
     <!-- inject:js -->
-    <script src="/js/highlight.pack.js"></script>
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/codemirror/lib/codemirror.js"></script>
-    <script src="/bower_components/bignumber.js/bignumber.js"></script>
-    <script src="/bower_components/crypto-js/index.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-    <script src="/bower_components/web3/dist/web3.js"></script>
-    <script src="/bower_components/web3/dist/web3.min.js"></script>
+    <script src="./bower_components/jquery/dist/jquery.js"></script>
+    <script src="./js/highlight.pack.js"></script>
+    <script src="./bower_components/codemirror/lib/codemirror.js"></script>
+    <script src="./bower_components/bignumber.js/bignumber.js"></script>
+    <script src="./bower_components/crypto-js/index.js"></script>
+    <script src="./bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+    <script src="./bower_components/web3/dist/web3.js"></script>
+    <script src="./bower_components/web3/dist/web3.min.js"></script>
+    <script src="./js/main.js"></script>
     <!-- endinject -->
+
+    <script>hljs.initHighlightingOnLoad();</script>
+
   </body>
 </html>
