--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>CryptoClerk</title>
     <!-- inject:css -->
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- endinject -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/styles/default.min.css">
 
@@ -152,14 +152,14 @@
     </div>
 
     <!-- inject:js -->
-    <script src="./bower_components/jquery/dist/jquery.js"></script>
-    <script src="./bower_components/bignumber.js/bignumber.js"></script>
-    <script src="./js/functions.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./bower_components/crypto-js/index.js"></script>
-    <script src="./bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-    <script src="./bower_components/web3/dist/web3.js"></script>
-    <script src="./bower_components/web3/dist/web3.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/bignumber.js/bignumber.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/main.js"></script>
+    <script src="bower_components/crypto-js/index.js"></script>
+    <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+    <script src="bower_components/web3/dist/web3.js"></script>
+    <script src="bower_components/web3/dist/web3.min.js"></script>
     <!-- endinject -->
 
     <!-- BLOC SCRIPTS -->
@@ -169,7 +169,7 @@
     <script src="http://hacknet.blockapps.net/static/js/api.js"></script>
 
       <!-- REPLACE IF REGENERATE CONTRACT -->
-      <script src="../js/Registry.js"></script>
+      <script src="js/Registry.js"></script>
     <!-- END BLOC -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.7/highlight.min.js"></script>
